python/testData/quickFixes/PyAddImportQuickFixTest/beforeImportAboveNoInspectionComment/main.py
#noinspection PyUnresolvedReferences
from b import no_so


<error descr="Unresolved reference 'a'"><caret>a</error>